# QmlWidgetTranslator

./: .appveyor.yml  8a173426ac19de844e11ddf17a868f39aa1a01709187e2706dcdb85b526836a1_8d.html  8a173426ac19de844e11ddf17a868f39aa1a01709187e2706dcdb85b526836a1_8d_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  CMakeLists.txt  DialogProgressStatus_8cpp.html  DialogProgressStatus_8h_source.html  Doxyfile  HtmlTag_8h.html  HtmlTag_8h.js  HtmlTag_8h_source.html  MainWindow_8cpp.html  MainWindow_8cpp_source.html  MainWindow_8h.html  MainWindow_8h_source.html  MyDatatables_8cpp.html  MyDatatables_8cpp_source.html  MyDatatables_8h.html  MyDatatables_8h.js  MyDatatables_8h_source.html  MyLanguageData_8cpp.html  MyLanguageData_8cpp_source.html  MyLanguageData_8h.html  MyLanguageData_8h.js  MyLanguageData_8h_source.html  MyLanguageModel_8cpp.html  MyLanguageModel_8cpp_source.html  MyLanguageModel_8h.html  MyLanguageModel_8h.js  MyLanguageModel_8h_source.html  MyOrgSettings_8cpp.html  MyOrgSettings_8cpp_source.html  MyOrgSettings_8h.html  MyOrgSettings_8h_source.html  QmlWidgetTranslator.pro  QmlWidgetTranslator.qrc  README.md  README_ar.md  README_de.md  (+228 more)
android/: AndroidManifest.xml
config/: config.xml
help/: About-Author_es.md  About-Author_ja.md  About-Author_no.md  About-Author_sv.md  About_ar.md  About_de.md  About_en.md  About_es.md  About_fr.md  About_it.md  About_ja.md  About_no.md  About_ru.md  About_sv.md  About_zh_CN.md  Help_ar.md  Help_de.md  Help_en.md  Help_es.md  Help_fr.md  Help_it.md  Help_ja.md  Help_no.md  Help_ru.md  Help_sv.md  Help_zh_CN.md
ios/: Info.plist
macos/: Info.plist
qml/: Style.qml  main.qml
resources/: CMakeLists.txt  QmlWidgetTranslator.desktop
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_15.js  all_16.js  all_18.js  all_1a.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_f.js  classes_1.js  defines_0.js  enums_4.js  enumvalues_12.js  enumvalues_14.js  enumvalues_16.js  enumvalues_2.js  enumvalues_3.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_b.js  enumvalues_e.js  files_2.js  files_3.js  functions_10.js  functions_12.js  functions_2.js  functions_6.js  functions_8.js  functions_b.js  (+12 more)
src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  MyDatatables.cpp  MyDatatables.h  MyLanguageModel.cpp  MyLanguageModel.h  MyOrgSettings.cpp  MyOrgSettings.h  SimpleCrypt.h  main.cpp
src/Test/QmlWidgetTranslatorTestCase/: CMakeLists.txt  tst_qmlwidgettranslatortestcase.cpp
translations/: QmlWidgetTranslator_ar.qm  QmlWidgetTranslator_ar.ts  QmlWidgetTranslator_de.qm  QmlWidgetTranslator_de.ts  QmlWidgetTranslator_en.qm  QmlWidgetTranslator_en.ts  QmlWidgetTranslator_es.qm  QmlWidgetTranslator_es.ts  QmlWidgetTranslator_fr.qm  QmlWidgetTranslator_fr.ts  QmlWidgetTranslator_it.qm  QmlWidgetTranslator_it.ts  QmlWidgetTranslator_ja.qm  QmlWidgetTranslator_ja.ts  QmlWidgetTranslator_no.qm  QmlWidgetTranslator_no.ts  QmlWidgetTranslator_ru.qm  QmlWidgetTranslator_ru.ts  QmlWidgetTranslator_sv.qm  QmlWidgetTranslator_sv.ts  (+2 more)
(+247 files in other folders)
